# Nx86

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  audit.md  justfile  legal.txt
.github/ISSUE_TEMPLATE/: backend-bug.md  compiler-bug.md  crash-report.md  documentation-issue.md  feature-request.md  game-compatibility-bug.md  performance-issue.md  profile-bug.md  runtime-bug.md  shader-graphics-bug.md
.github/scripts/: verify-linux-x86_64-v4.sh
.github/workflows/: ci.yml  linux-x86_64-v4.yml
crates/nx86-app/: Cargo.toml
crates/nx86-app/src/: main.rs
crates/nx86-arm64-decode/: Cargo.toml
crates/nx86-arm64-decode/src/: lib.rs
crates/nx86-arm64-lift/: Cargo.toml
crates/nx86-arm64-lift/src/: lib.rs  recover.rs
crates/nx86-audio/: Cargo.toml
crates/nx86-audio/src/: lib.rs
crates/nx86-backend/: Cargo.toml
crates/nx86-backend/src/: chain.rs  dispatch.rs  lib.rs
crates/nx86-cache/: Cargo.toml
crates/nx86-cache/src/: lib.rs
crates/nx86-core/: Cargo.toml
crates/nx86-core/src/: config.rs  coverage.rs  guest.rs  ipc.rs  lib.rs  storage.rs
crates/nx86-debug/: Cargo.toml
crates/nx86-debug/src/: logging.rs
crates/nx86-fuzz/: Cargo.toml
crates/nx86-fuzz/src/: lib.rs
crates/nx86-gpu/: Cargo.toml
crates/nx86-gpu/src/: lib.rs
crates/nx86-gso/: Cargo.toml
crates/nx86-gso/src/: lib.rs
crates/nx86-gui/: Cargo.toml
crates/nx86-gui/src/: lib.rs  screens.rs  theme.rs
crates/nx86-hle/: Cargo.toml
crates/nx86-hle/src/: lib.rs
crates/nx86-import/: Cargo.toml
crates/nx86-import/src/: lib.rs
crates/nx86-input/: Cargo.toml
crates/nx86-input/src/: lib.rs
crates/nx86-inspector/: Cargo.toml
crates/nx86-inspector/src/: lib.rs
crates/nx86-ir/: Cargo.toml
crates/nx86-ir-opt/: Cargo.toml
crates/nx86-ir-opt/src/: lib.rs
crates/nx86-ir/src/: lib.rs  verify.rs
crates/nx86-jit/: Cargo.toml
crates/nx86-jit/src/: emergency.rs  lib.rs
crates/nx86-object/: Cargo.toml
crates/nx86-object/src/: lib.rs
crates/nx86-profile/: Cargo.toml
crates/nx86-profile/src/: lib.rs
crates/nx86-regalloc/: Cargo.toml
crates/nx86-regalloc/src/: lib.rs
crates/nx86-runtime/: Cargo.toml
crates/nx86-runtime/src/: eval.rs  lib.rs
crates/nx86-scheduler/: Cargo.toml
crates/nx86-scheduler/src/: lib.rs
crates/nx86-service/: Cargo.toml
crates/nx86-service/src/: lib.rs
crates/nx86-shader/: Cargo.toml
crates/nx86-shader/src/: aot.rs  cache.rs  lib.rs  object.rs  pipeline_hints.rs
crates/nx86-testsuite/: Cargo.toml
crates/nx86-testsuite/src/: lib.rs
crates/nx86-title-db/: Cargo.toml
crates/nx86-title-db/src/: lib.rs
crates/nx86-title-profiles/: Cargo.toml
crates/nx86-title-profiles/src/: lib.rs
crates/nx86-vmm/: Cargo.toml
crates/nx86-vmm/src/: lib.rs  smc_signal.rs
crates/nx86-vulkan/: Cargo.toml
crates/nx86-vulkan/src/: context.rs  error.rs  lib.rs  offscreen.rs  pipeline_cache.rs  swapchain.rs
crates/nx86-x64-asm/: Cargo.toml
crates/nx86-x64-asm/src/: lib.rs
crates/nx86-x64-v4/: Cargo.toml
crates/nx86-x64-v4/src/: lib.rs
docs/adr/: README.md
docs/developer/: crate-plan.md  phase-0-10-review.md  phase-11-15-review.md  phase-16-18-review.md  phase-19-20-review.md  phase-21-22-review.md  phase-23-review.md  phase-24-review.md  phase-25-review.md  phase-26-review.md  phase-27-review.md  phase-28-review.md  phase-29-review.md  phase-30-review.md  phase-31-review.md  phase-32-review.md  phase-33-review.md  phase-34-review.md  phase-35-review.md  phase-36-review.md  phase-37-review.md  phase-38-review.md  phase-39-review.md  phase-40-review.md  phase-41-review.md  phase-42-review.md  phase-43-review.md  phase-44-review.md  phase-45-review.md  phase-46-review.md  phase-47-review.md  phase-48-review.md  phase-49-review.md  phase-50-review.md  phase-51-review.md
docs/phases/: phase-0.md  phase-1.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-15.md  phase-16.md  phase-17.md  phase-18.md  phase-19.md  phase-2.md  phase-20.md  phase-21.md  phase-22.md  phase-23.md  phase-24.md  phase-25.md  phase-26.md  phase-27.md  phase-28.md  phase-29.md  phase-3.md  phase-30.md  phase-31.md  phase-32.md  phase-33.md  phase-34.md  phase-35.md  phase-36.md  phase-37.md  phase-38.md  phase-39.md  phase-4.md  phase-40.md  phase-41.md  phase-42.md  phase-43.md  phase-44.md  (+12 more)
docs/research/: README.md
tests/synthetic/: barriers.toml  draw.toml  neon-basic.toml  scalar-fp.toml
