[package]
name = "nx86-audio"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["host-cpal"]
host-cpal = ["dep:cpal"]

[dependencies]
cpal = { workspace = true, optional = true }
thiserror.workspace = true

[lints]
workspace = true
