[package]
name = "nx86-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
nx86-core = { path = "../nx86-core" }
nx86-ir = { path = "../nx86-ir" }
nx86-jit = { path = "../nx86-jit" }
nx86-x64-v4 = { path = "../nx86-x64-v4" }

[lints]
workspace = true
