[package]
name = "nx86-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
native-patch-chaining = []

[dependencies]
nx86-cache = { path = "../nx86-cache" }
nx86-core = { path = "../nx86-core" }
nx86-ir = { path = "../nx86-ir" }
nx86-jit = { path = "../nx86-jit" }
nx86-object = { path = "../nx86-object" }
nx86-profile = { path = "../nx86-profile" }
nx86-vmm = { path = "../nx86-vmm" }
nx86-x64-asm = { path = "../nx86-x64-asm" }
nx86-x64-v4 = { path = "../nx86-x64-v4" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
