[package]
name = "nx86-cache"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
nx86-object = { path = "../nx86-object" }
serde = { workspace = true }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
