[package]
name = "nx86-gui"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = ["host-audio", "host-input"]
host-audio = ["nx86-audio/host-cpal", "nx86-runtime/host-audio"]
host-input = ["nx86-input/host-gilrs", "nx86-runtime/host-input"]

[dependencies]
eframe.workspace = true
egui.workspace = true
nx86-arm64-decode = { path = "../nx86-arm64-decode" }
nx86-audio = { path = "../nx86-audio", default-features = false }
nx86-cache = { path = "../nx86-cache" }
nx86-core = { path = "../nx86-core" }
nx86-gpu = { path = "../nx86-gpu" }
nx86-input = { path = "../nx86-input", default-features = false }
nx86-inspector = { path = "../nx86-inspector" }
nx86-runtime = { path = "../nx86-runtime", default-features = false }
nx86-scheduler = { path = "../nx86-scheduler" }
nx86-shader = { path = "../nx86-shader" }
nx86-testsuite = { path = "../nx86-testsuite" }
nx86-title-db = { path = "../nx86-title-db" }
nx86-vmm = { path = "../nx86-vmm" }
rfd.workspace = true
tracing.workspace = true

[lints]
workspace = true
