[package]
name = "nx86-inspector"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
nx86-arm64-decode = { path = "../nx86-arm64-decode" }
nx86-arm64-lift = { path = "../nx86-arm64-lift" }
nx86-x64-v4 = { path = "../nx86-x64-v4" }
thiserror.workspace = true

[lints]
workspace = true
