[package]
name = "nx86-runtime"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
nx86-arm64-decode = { path = "../nx86-arm64-decode" }
nx86-core = { path = "../nx86-core" }
nx86-testsuite = { path = "../nx86-testsuite" }
thiserror.workspace = true

[lints]
workspace = true
