[package]
name = "nx86-runtime"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
nx86-arm64-decode = { path = "../nx86-arm64-decode" }
nx86-arm64-lift = { path = "../nx86-arm64-lift" }
nx86-backend = { path = "../nx86-backend" }
nx86-core = { path = "../nx86-core" }
nx86-ir = { path = "../nx86-ir" }
nx86-ir-opt = { path = "../nx86-ir-opt" }
nx86-testsuite = { path = "../nx86-testsuite" }
nx86-vmm = { path = "../nx86-vmm" }
thiserror.workspace = true

[lints]
workspace = true
