[package]
name = "nx86-vulkan"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# `loaded` pulls in `libloading` + `std` so the Vulkan loader is resolved at
# runtime. Hosts without a loader (the Apple Silicon dev host, headless CI)
# report a clean `Unavailable` instead of failing to build or link.
ash = { workspace = true, features = ["loaded"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
